fix overflow of code

--- a/static/main.css
+++ b/static/main.css
@@ -32,6 +32,7 @@ code {
     color: lightblue;
     white-space: pre;
     font-family: Inconsolata;
+    overflow-x: scroll;
 }
 .back-to-home {
     position: fixed !important;
